--- a/style.css
+++ b/style.css
@@ -1,46 +1,47 @@
-* {
-  /* box-sizing: border-box; */
-}
+/* in my opinion the background for the search results
+as well as the input looked a bit cleaner without a gradient
+but rather a solid color pull from the gradient */
 
-:focus {
- /* TODO */
+* {
+  box-sizing: border-box;
 }
 
 body {
-  /* TODO */
+  background: rgb(248,210,34);
+  background: linear-gradient(45deg, rgba(248,210,34,1) 15%, rgba(230,92,0,1) 100%);
+  height: 100vh;
 }
 
 input {
- /* TODO */
+  background: #eec382;
+  padding: 8px;
+  border: solid rgb(56, 58, 60) 1px;
+  border-radius: 4px;
 }
 
 .search-container {
- /* TODO */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.search-container input,
+
 .search-container .suggestions {
-  /* TODO */
-}
-.search-container input {
- /* TODO */
-}
-.search-container .suggestions {
-   /* TODO */
+  position: absolute;
+  width: 100%;
 }
 
 ul {
-  /* TODO */
-}
-ul.has-suggestions {
-  /* TODO */
-}
-ul li {
-  /* TODO */
-}
-ul li:hover {
-  /* TODO */
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-input {
-   /* TODO */
+ul li {
+  background: #eec382;
+  padding: 7px;
+}
+
+ul li:hover {
+  background: #e65d00;
 }
